--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "my-cms",
+  "name": "sabzlearn-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.2",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0",
-    "react-google-recaptcha": "^3.1.0",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.15.0",
+    "bootstrap": "^5.1.3",
+    "fontawesome": "^5.6.3",
+    "react": "^18.1.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.1.0",
+    "react-google-recaptcha": "^2.1.0",
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-shimmer": "^3.2.0",
     "react-toastify": "^9.1.3",
     "sweetalert": "^2.1.2",
-    "typewriter-effect": "^2.21.0",
+    "typewriter-effect": "^2.19.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
