--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5",
     "typewriter-effect": "^2.19.0",
     "uuid": "^8.3.2",
