--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "dompurify": "^3.0.6",
     "fontawesome": "^5.6.3",
     "react": "^18.1.0",
