--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^9.1.3",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.1",
